Add nova informação ao exercício

--- a/Fundamentos/HTMLS_CSS/Dia1- Estruturas_De_Paginas/Exercicio_1.html
+++ b/Fundamentos/HTMLS_CSS/Dia1- Estruturas_De_Paginas/Exercicio_1.html
@@ -12,11 +12,12 @@
          <li><a href="#russia">Rússia</a></li>
          <li><a href="#marrocos">Marrocos</a></li>
          <li><a href="#egito">Egito</a></li>
+         <li><a href="#jordania">Jordânia</a></li>
      </ul>
       <img id="japao" src="./Fotos/Monte Fuji.jpeg" alt="Monte Fuji"  width="150px">
       <img id="russa" src="./Fotos/Montes Urais.jpeg" alt="Montes Urais" width="150px">
       <img id="marrocos" src="./Fotos/Rabat.jpeg" alt="Rabat" width="194px">
       <img id="egito" src="./Fotos/Cairo.jpeg" alt="Cairo" width="170px">
-         
+       <img id="jordania" src="./Fotos/Jordânia.jpeg" alt="Jordânia" width="150px">  
   </body>
 </html>
